# BaderCycle

./: CMakeLists.txt  DistGather.c  DistGather.h  GraphUtilities.c  GraphUtilities.h  README.md  bader.c  baderDetect.c  baderDetect.h  globalVars.h  mpiUtils.c  mpiUtils.h
Grids/: grid1src100.txt  grid4src10000.csv  test.txt  testGrid.txt  testStrong.txt
